<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="tampilanOneVM" type="com.faasapplication.app.modules.tampilanone.data.viewmodel.TampilanOneVM"/>
    </data>
    <LinearLayout android:id="@+id/linearTampilanOne"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtGroupEight"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_20pxv"
            android:paddingStart="@dimen/_23pxh"
            android:paddingTop="@dimen/_26pxv" android:singleLine="true"
            android:text="@{tampilanOneVM.tampilanOneModel.txtGroupEight}"
            style="@style/txtSolid" tools:text="@string/lbl_rumus_balok"/>
        <ImageView android:id="@+id/imageRectangleTwo"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_176pxh"
            android:layout_marginEnd="@dimen/_13pxh"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="@dimen/_239pxh"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_rectangle2_176x239}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle2_176x239"/>
        <TextView android:ellipsize="end" android:id="@+id/txtPrice"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_13pxh"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{tampilanOneVM.tampilanOneModel.txtPrice}"
            style="@style/txtIntersemibold12" tools:text="@string/lbl_panjang"/>
        <View android:background="@color/indigo_A700"
            android:id="@+id/lineLineOne"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_1pxv"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_28pxv" android:layout_width="@dimen/_350pxh"/>
        <TextView android:ellipsize="end" android:id="@+id/txtLEBAR"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{tampilanOneVM.tampilanOneModel.txtLEBAR}"
            style="@style/txtIntersemibold12" tools:text="@string/lbl_lebar"/>
        <View android:background="@color/indigo_A700"
            android:id="@+id/lineLineTwo"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_1pxv"
            android:layout_marginEnd="@dimen/_8pxh"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_28pxv" android:layout_width="@dimen/_350pxh"/>
        <TextView android:ellipsize="end" android:id="@+id/txtTINGGI"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{tampilanOneVM.tampilanOneModel.txtTINGGI}"
            style="@style/txtIntersemibold12" tools:text="@string/lbl_tinggi"/>
        <View android:background="@color/indigo_A700"
            android:id="@+id/lineLineThree"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_1pxv"
            android:layout_marginEnd="@dimen/_8pxh"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_27pxv" android:layout_width="@dimen/_350pxh"/>
        <LinearLayout android:id="@+id/linearRowhitungLuas"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_13pxh"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnHitungLuas"
                android:layout_height="@dimen/_32pxv"
                android:layout_width="@dimen/_118pxh"
                android:paddingBottom="@dimen/_10pxv"
                android:paddingEnd="@dimen/_20pxh"
                android:paddingStart="@dimen/_16pxh"
                android:paddingTop="@dimen/_10pxv"
                android:singleLine="true"
                android:text="@string/lbl_hitung_luas"
                android:textAllCaps="false" style="@style/btnSolid" tools:text="@string/lbl_hitung_luas"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnHitungVolume"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_51pxh"
                android:layout_weight="0.52" android:layout_width="0dp"
                android:paddingBottom="@dimen/_10pxv"
                android:paddingEnd="@dimen/_11pxh"
                android:paddingStart="@dimen/_16pxh"
                android:paddingTop="@dimen/_10pxv"
                android:singleLine="true"
                android:text="@string/lbl_hitung_volume"
                android:textAllCaps="false" style="@style/btnSolid" tools:text="@string/lbl_hitung_volume"/>
        </LinearLayout>
        <TextView android:ellipsize="end" android:id="@+id/txtVOLUME"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_36pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{tampilanOneVM.tampilanOneModel.txtVOLUME}"
            style="@style/txtIntersemibold12" tools:text="@string/lbl_volume"/>
        <TextView android:ellipsize="end" android:id="@+id/txtLUAS"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_30pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{tampilanOneVM.tampilanOneModel.txtLUAS}"
            style="@style/txtIntersemibold12" tools:text="@string/lbl_luas"/>
    </LinearLayout>
</layout>
